Fix for unnecessary scrollbars in taxon descriptions

--- a/emonocot-static/src/main/less/emonocot.less
+++ b/emonocot-static/src/main/less/emonocot.less
@@ -600,7 +600,6 @@ div.olMap {
 }
 
 .description-with-citations {
-	overflow: auto;
 	clear:both;
 	width: 100%;
 	margin-bottom:30px;
@@ -788,6 +787,7 @@ section {
 ul.citations {
 	list-style: none;
 	margin: 0px;
+	padding-bottom: 1rem;
 	float: right;
 
 	&:before {
